--- a/Widgets/NQVTKWindow.ui
+++ b/Widgets/NQVTKWindow.ui
@@ -71,6 +71,29 @@
            <number>6</number>
           </property>
           <item>
+           <widget class="QLabel" name="label_5" >
+            <property name="text" >
+             <string>maxLayers</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSlider" name="maxLayers" >
+            <property name="minimum" >
+             <number>1</number>
+            </property>
+            <property name="maximum" >
+             <number>50</number>
+            </property>
+            <property name="value" >
+             <number>6</number>
+            </property>
+            <property name="orientation" >
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QLabel" name="label_4" >
             <property name="text" >
              <string>opacity</string>
