--- a/Widgets/NQVTKWindow.ui
+++ b/Widgets/NQVTKWindow.ui
@@ -318,6 +318,18 @@
          <layout class="QVBoxLayout" name="verticalLayout" >
           <item>
            <widget class="QDial" name="lightOffsetDirection" >
+            <property name="sizePolicy" >
+             <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize" >
+             <size>
+              <width>16777215</width>
+              <height>50</height>
+             </size>
+            </property>
             <property name="maximum" >
              <number>360</number>
             </property>
@@ -327,14 +339,17 @@
             <property name="pageStep" >
              <number>15</number>
             </property>
+            <property name="value" >
+             <number>270</number>
+            </property>
             <property name="wrapping" >
              <bool>true</bool>
             </property>
             <property name="notchTarget" >
-             <double>5.000000000000000</double>
+             <double>2.000000000000000</double>
             </property>
             <property name="notchesVisible" >
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
