--- a/Widgets/NQVTKWindow.ui
+++ b/Widgets/NQVTKWindow.ui
@@ -377,6 +377,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QPushButton" name="brushTest" >
+          <property name="text" >
+           <string>brushTest</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer" >
           <property name="orientation" >
            <enum>Qt::Vertical</enum>
