--- a/Widgets/NQVTKWindow.ui
+++ b/Widgets/NQVTKWindow.ui
@@ -90,9 +90,9 @@
        <property name="geometry" >
         <rect>
          <x>0</x>
-         <y>0</y>
+         <y>-54</y>
          <width>177</width>
-         <height>794</height>
+         <height>836</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3" >
@@ -357,6 +357,29 @@
            </item>
            <item>
             <widget class="QSlider" name="stepSize" >
+             <property name="minimum" >
+              <number>5</number>
+             </property>
+             <property name="maximum" >
+              <number>250</number>
+             </property>
+             <property name="value" >
+              <number>25</number>
+             </property>
+             <property name="orientation" >
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="kernelSizeLabel" >
+             <property name="text" >
+              <string>Kernel size:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSlider" name="kernelSize" >
              <property name="minimum" >
               <number>5</number>
              </property>
