--- a/Widgets/NQVTKWindow.ui
+++ b/Widgets/NQVTKWindow.ui
@@ -90,7 +90,7 @@
        <property name="geometry" >
         <rect>
          <x>0</x>
-         <y>-308</y>
+         <y>-229</y>
          <width>177</width>
          <height>1303</height>
         </rect>
@@ -400,6 +400,9 @@
            </item>
            <item>
             <widget class="QSlider" name="stepSize" >
+             <property name="toolTip" >
+              <string>10.0</string>
+             </property>
              <property name="minimum" >
               <number>5</number>
              </property>
@@ -407,7 +410,7 @@
               <number>200</number>
              </property>
              <property name="value" >
-              <number>10</number>
+              <number>100</number>
              </property>
              <property name="orientation" >
               <enum>Qt::Horizontal</enum>
@@ -423,6 +426,9 @@
            </item>
            <item>
             <widget class="QSlider" name="kernelSize" >
+             <property name="toolTip" >
+              <string>1.0</string>
+             </property>
              <property name="minimum" >
               <number>5</number>
              </property>
